--- a/views/index.html
+++ b/views/index.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
-        async defer>
-    </script>
 
-    <title>Recaptcha Project</title>
-  </head>
-  <body>
-    <h3 class="text-center mt-4">Recaptcha using Nodejs</h3>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    crossorigin="anonymous">
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 
-    <form>
-      <div class="container">
-        <div class="jumbotron mt-5">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input
-              type="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-              placeholder="Enter email"
-            />
-            <small id="emailHelp" class="form-text text-muted"
-              >We'll never share your email with anyone else.</small
-            >
-          </div>
+  <title>Captcha Project</title>
+  
+</head>
 
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="exampleInputPassword1"
-              placeholder="Password"
-            />
-          </div>
+<body>
+  <div class="container">
+    <h1 class="text-center mt-4">Captcha Page</h1>
 
-          <div class="form-group">
-            <div
-              class="g-recaptcha"
-              data-sitekey="6LdyRa4UAAAAAFSNEf-m5gujL3Ez_8IRYan_PAvc">
-            </div>
-          </div>
-
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+    <form class="jumbotron mt-5" id="subscribeForm">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" class="form-control">
       </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email" class="form-control">
+      </div>
+      <div class="form-group">
+        <div class="g-recaptcha" data-sitekey="6LdyRa4UAAAAAFSNEf-m5gujL3Ez_8IRYan_PAvc"></div>
+      </div>
+      <input type="submit" value="Submit" class="btn btn-primary">
     </form>
-  </body>
+  </div>
+
+  <script>
+  document.getElementById('subscribeForm').addEventListener('submit', submitForm);
+    function submitForm(e){
+      e.preventDefault();
+      
+      const name = document.querySelector('#name').value;
+      const email = document.querySelector('#email').value;
+      const captcha = document.querySelector('#g-recaptcha-response').value;
+      fetch('/subscribe', {
+        method:'POST',
+        headers: {
+          'Accept': 'application/json, text/plain, */*',
+          'Content-type':'application/json'
+        },
+        body:JSON.stringify({name:name, email: email, captcha: captcha})
+      })
+      .then((res) => res.json())
+      .then((data) => {
+        console.log(data);
+        alert(data.msg);
+      });
+    };
+  </script>
+</body>
+
 </html>
